client/src/Components/Tables/ArtistTable/ArtistTable.module.scss
@import '../../../GlobalStyles/colors.css';
@import '../../../GlobalStyles/generalVars.scss';

.artistTable {
	display: grid;
	grid-template-columns: 1fr; // Full width items, just stack them on top of eachother with their own custom heights.

	padding: 15px 25px;
	border-collapse: collapse;
	border-radius: 4px;

	&.darkTheme {
		background: var(--black);
		color: var(--white);
		box-shadow: var(--boxShadowDarkTheme);
	}

	&.lightTheme {
		background: var(--white);
		color: var(--black);
		box-shadow: var(--boxShadowLightTheme);
	}

}

.tableHeader {
	display: grid;
}

.tableBody {
	display: grid;
	vertical-align: none;
	
}

.tableFooter {
	display: grid;
}

